/*
 * $Id: ChangeLog,v 1.1940 2003/12/23 22:52:47 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-12-23 16:14 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * contrib/what32/source/_windraw.c
  * contrib/what32/source/_winfont.c
  * contrib/what32/source/_wingdi.c
  * contrib/what32/source/_winhead.c
  * contrib/what32/source/_winlv.c
  * contrib/what32/source/_winmisc.c
  * contrib/what32/source/_winscrlb.c
  * contrib/what32/source/_winsock.c
  * contrib/what32/source/whatutil.prg
  * contrib/what32/source/wincore.prg
    * Replaced direct access to hb_stack with API access.
    * Minor corrections.

2003-12-23 23:48 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/config/w32/mingw32.cf
    * grouped xHarbour libraries to resolve problem with cyclic cross
      referenced and gdi32, comctl32 libs added for linking with GTWVT

  * xharbour/bin/hb-func.sh
    * gdi32, comctl32 libs added for linking with GTWVT

  * xharbour/make_tgz.sh
  * xharbour/xharbour.spec
    * remove unnecessary now definitions

2003-12-23 17:50 UTC-0300 Mauricio Abre <maurifull@datafull.com>
  * source/rtl/gtwvt/gtwvt.c
    ! Fixed color values to be more DOS-like

2003-12-24 08:33 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * /source/rtl/persist.prg
  + Handle string enclosed in [] when replacing CHR(13) & CHR(10)

2003-12-24 07:17 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * /source/rtl/persist.prg
  + fixed for save data prior to "// HBPersistent Ver 2.0"

2003-12-23 21:50 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
   * source/rtl/gtwvt/gtwvt.c
     * #define WHITE RGB( 0xC6, 0xC6, oxC6 )
       White color more near to terminal screen.
     * Formatting to make it more tangible to new comers.

2003-12-22 22:36 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/rdd/dbcmd.c